@@ -118,6 +118,7 @@ fully support the editing toolbar, but was found to be too confusing.
   by default when 'watchdefault' option is on
 * Skip update of disused 'rc_cur_time' field (todo: discard the field)
 * (bug 3506) Avoid MySQL error when Listusers returns no results
+* (bug 3182) Clear link cache during import to prevent memory leak
 
 
 === Caveats ===
